--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -6,15 +6,28 @@
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <%= link_to 'All Questions', questions_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
+        <%= link_to 'Post a question', new_question_path, class: 'nav-link' %>
+      </li>
+    </ul>
     <ul class="navbar-nav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <%= link_to 'All Questions', questions_path, class: 'nav-link' %>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'Post a question', new_question_path, class: 'nav-link' %>
-        </li>
-      </ul>
+      <li class="nav-item mr-3">
+        <% unless user_signed_in? %>
+          <%= link_to 'Login', new_user_session_path, class: 'btn btn-dark' %>
+          </li>
+          <li class="nav-item">
+          <%= link_to 'Sign up', new_registration_path(:user), class: 'btn btn-info' %>
+        <% else %>
+           <span class="navbar-text text-info"><%= current_user.name %></span>
+          </li>
+          <li class="nav-item">
+          <%= link_to 'Logout', destroy_user_session_path, class: 'btn btn-dark', method: :delete %>
+        <% end %>
+      </li>
     </ul>
   </div>
 </nav>
