--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -2,7 +2,6 @@
   <% if question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(question.errors.count, "error") %> prohibited this question from being saved:</h2>
-
       <ul>
       <% question.errors.full_messages.each do |message| %>
         <li><%= message %></li>
@@ -11,7 +10,22 @@
     </div>
   <% end %>
 
+  <div class="form-group">
+    <%= form.label :topic_id, 'Choose topic' %>
+    <%= form.collection_select :topic_id, Topic.all, :id, :title, {}, {class: 'form-control'} %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :text, 'Type your question below' %>
+    <%= form.text_area :text, class: 'form-control' %>
+  </div>
+
+  <div class="form-check">
+    <%= form.check_box :anonymous, class: 'form-check-input' %>
+    <%= form.label :anonymous, 'Post anonymously', class: 'form-check-label' %>
+  </div>
+
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit 'Post', class: 'btn btn-success' %>
   </div>
 <% end %>
