--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,12 +1,3 @@
-
 <h2><%= @topic.nil? ? 'Questions' : @topic.title %></h2>
 
-<ul>
-  <% @questions.each do |question| %>
-    <li>
-      <%= link_to truncate(question.text, length: 60), question %>
-      <small>by <%= question.author_name %></small>
-    </li>
-  <% end %>
-</ul>
-
+<%= render partial: 'question_list', locals: {questions: @questions} %>
