--- a/app/views/application/_topics.html.erb
+++ b/app/views/application/_topics.html.erb
@@ -1,7 +1,7 @@
 <div class="card topic-list">
-  <div class="card-header"><b>Hottest topics</b></div>
+  <div class="card-header"><b>Hottest topics</b> | <%= link_to 'All', topics_path %></div>
   <ul class="list-group list-group-flush">
-    <% @topics.each do |topic| %>
+    <% @top_topics.each do |topic| %>
       <li class="list-group-item">
         <span class="badge badge-pill badge-info"><%= topic['questions_count'] %></span>
         <%= link_to topic.title, questions_path(topic_id: topic.id) %>
